test/parser.d/invalid/type_constructors1.surc.bad
p1: Pair(Integer Integer) = (3 , 4)
